tests/algorithms/x/Clojure/data_structures/stacks/stock_span_problem.out
Syntax error compiling at (/workspace/mochi/tests/algorithms/x/Clojure/data_structures/stacks/stock_span_problem.clj:30:596).
Unable to resolve symbol: slice in this context

Full report at:
/tmp/clojure-18097635108547003524.edn